driver/tests/snap/type_error/return_type_mismatch/0_input.splic
fn bad(x: u64) -> u32 { x }
